@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------
 Version 1.12.x (RGer), 2006-xx-xx
 - implemented some changes to support Solaris
+- commented out (via #if 0) some methods that are currently not being used
+  but should be kept for further use
 ---------------------------------------------------------------------------
 Version 1.12.2 (RGer), 2006-02-15
 - fixed a bug in the RFC 3339 date formatter. An extra space was added
